k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auditronai
  labels:
    name: auditronai
    environment: production
